[gd_scene load_steps=4 format=3 uid="uid://sd7jjnlo1huc"]

[ext_resource type="Texture2D" uid="uid://bsr6j0m6a1m2g" path="res://icon.svg" id="1_p6lqy"]
[ext_resource type="Script" path="res://tower/test_projectile.gd" id="1_s8w0x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aos1u"]
size = Vector2(8, 12)

[node name="TestProjectile" type="CharacterBody2D"]
script = ExtResource("1_s8w0x")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
scale = Vector2(0.0625, 0.09375)
texture = ExtResource("1_p6lqy")

[node name="Area2D" type="Area2D" parent="." groups=["TowerProjectile"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_aos1u")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
